--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
+    "react-router-dom": "^5.2.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-redux": "^7.1.16",
     "@types/redux-saga": "^0.10.5",
     "redux-devtools-extension": "^2.13.9"
