--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
     "react-router-dom": "^5.2.0",
+    "bootstrap": "4.6.0",
+    "react-bootstrap": "^1.6.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
