--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-boilerplate",
+  "homepage": "https://pulkitgpt27.github.io/react-boilerplate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,28 +11,31 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "4.6.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "typescript": "^4.1.2",
-    "react-router-dom": "^5.2.0",
-    "bootstrap": "4.6.0",
-    "react-bootstrap": "^1.6.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux-saga": "^0.10.5",
     "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
