--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-boilerplate",
-  "homepage": "https://pulkitgpt27.github.io/react-boilerplate",
+  "homepage": "https://pulkitgpt27.github.io/react-boilerplate/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -29,7 +29,15 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-saga": "^0.10.5",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/node-logger": "^6.2.9",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.9",
+    "babel-loader": "8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +45,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
